# ObsidianExporter

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REVIEW.md  SPEC.md  pyproject.toml  requirements.txt  test_notion_export.py
.claude/agents/: requirements-enforcer.md  software-architect.md  test-quality-auditor.md  ux-prototype-designer.md
preflight-scripts/: convert_wikilinks_final.py  restore_wikilinks.py
src/: cli.py
src/application/: export_use_case.py  notion_export_use_case.py  outline_export_use_case.py
src/domain/: appflowy_document_generator.py  content_transformer.py  fallback_parser.py  llm_assistant.py  llm_config.py  models.py  notion_document_generator.py  outline_document_generator.py  prosemirror_document_generator.py  vault_analyzer.py  vault_index_builder.py  wikilink_resolver.py
src/infrastructure/: file_system.py
src/infrastructure/generators/: appflowy_package_generator.py  (+2 more)
tests/: test_cli.py  test_cli_nested_documents.py
tests/application/: test_export_use_case.py  test_notion_export_use_case.py  test_outline_export_use_case.py  test_outline_nested_documents_integration.py
tests/domain/: test_appflowy_document_generator.py  test_content_transformer.py  test_fallback_parser.py  test_folder_analyzer.py  test_folder_structure.py  test_llm_assistant.py  test_models.py  test_notion_document_generator.py  test_notion_document_generator_exact_format.py  test_outline_document_generator.py  test_outline_folder_export.py  test_outline_nested_documents.py  test_outline_schema_compliance.py  test_prosemirror_document_generator.py  test_vault_analyzer.py  test_vault_index_builder.py  test_wikilink_resolver.py
tests/infrastructure/: test_file_system.py  test_gemini_provider.py  test_notion_package_generator.py  test_outline_package_generator.py
tests/integration/: test_clauded_vault_integration.py  test_folder_integration.py  test_notion_export_integration.py  test_vault_detection.py
(+9 files in other folders)
